--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CryptoPrice3</string>
+    <string name="app_name">CryptoPrice</string>
     <string name="bitcoinPrice">%1$s%2$s</string>
     <string name="ethereumPrice">%1$s%2$s</string>
     <string name="BTCName">%1$s</string>
