--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="ethereumPrice">%1$s%2$s</string>
     <string name="BTCName">%1$s</string>
     <string name="EName">%1$s</string>
+    <string name="eth_price">ETH Price</string>
+    <string name="btc_price">BTC Price</string>
+    <string name="submit">Submit</string>
 </resources>
