--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">CryptoPrice</string>
     <string name="bitcoinPrice">%1$s%2$s</string>
     <string name="ethereumPrice">%1$s%2$s</string>
+    <string name="btc24change">%1$s%2$s</string>
+    <string name="eth24change">%1$s%2$s</string>
+    <string name="btc24changetitle">24 Hours change</string>
+    <string name="eth24changetitle">24 Hours change</string>
     <string name="BTCName">%1$s</string>
     <string name="EName">%1$s</string>
     <string name="eth_price">ETH Price</string>
